cpl.output
Terminals unused in grammar

   CASE
   DEFAULT


Grammar

    0 $accept: program $end

    1 program: declarations stmt_block

    2 declarations: declarations declaration
    3             | /* empty */

    4 $@1: /* empty */

    5 declaration: $@1 idlist ':' type ';'

    6 type: INT
    7     | FLOAT

    8 idlist: idlist ',' ID
    9       | ID

   10 stmt: assignment_stmt
   11     | input_stmt
   12     | output_stmt
   13     | if_stmt
   14     | while_stmt
   15     | stmt_block

   16 assignment_stmt: ID '=' expression ';'

   17 input_stmt: INPUT '(' ID ')' ';'

   18 output_stmt: OUTPUT '(' expression ')' ';'

   19 $@2: /* empty */

   20 $@3: /* empty */

   21 if_stmt: IF create_label '(' boolexpr ')' $@2 stmt $@3 ELSE stmt

   22 $@4: /* empty */

   23 $@5: /* empty */

   24 while_stmt: WHILE create_label $@4 '(' boolexpr ')' $@5 stmt

   25 stmt_block: '{' stmtlist '}'

   26 stmtlist: stmtlist stmt
   27         | /* empty */

   28 boolexpr: boolexpr OR boolterm
   29         | boolterm

   30 boolterm: boolterm AND boolfactor
   31         | boolfactor

   32 boolfactor: NOT '(' boolexpr ')'
   33           | expression RELOP expression

   34 expression: expression ADDOP term
   35           | term

   36 term: term MULOP factor
   37     | factor

   38 factor: '(' expression ')'
   39       | CAST '(' expression ')'
   40       | ID
   41       | NUM

   42 create_label: /* empty */


Terminals, with rules where they appear

$end (0) 0
'(' (40) 17 18 21 24 32 38 39
')' (41) 17 18 21 24 32 38 39
',' (44) 8
':' (58) 5
';' (59) 5 16 17 18
'=' (61) 16
'{' (123) 25
'}' (125) 25
error (256)
CASE (258)
DEFAULT (259)
ELSE (260) 21
FLOAT (261) 7
IF (262) 21
INPUT (263) 17
INT (264) 6
OUTPUT (265) 18
WHILE (266) 24
RELOP (267) 33
ADDOP (268) 34
MULOP (269) 36
OR (270) 28
AND (271) 30
NOT (272) 32
CAST (273) 39
ID (274) 8 9 16 17 40
NUM (275) 41


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
create_label (30)
    on left: 42, on right: 21 24
boolexpr (31)
    on left: 28 29, on right: 21 24 28 32
boolterm (32)
    on left: 30 31, on right: 28 29 30
boolfactor (33)
    on left: 32 33, on right: 30 31
factor (34)
    on left: 38 39 40 41, on right: 36 37
term (35)
    on left: 36 37, on right: 34 35 36
expression (36)
    on left: 34 35, on right: 16 18 33 34 38 39
type (37)
    on left: 6 7, on right: 5
program (38)
    on left: 1, on right: 0
declarations (39)
    on left: 2 3, on right: 1 2
declaration (40)
    on left: 5, on right: 2
$@1 (41)
    on left: 4, on right: 5
idlist (42)
    on left: 8 9, on right: 5 8
stmt (43)
    on left: 10 11 12 13 14 15, on right: 21 24 26
assignment_stmt (44)
    on left: 16, on right: 10
input_stmt (45)
    on left: 17, on right: 11
output_stmt (46)
    on left: 18, on right: 12
if_stmt (47)
    on left: 21, on right: 13
$@2 (48)
    on left: 19, on right: 21
$@3 (49)
    on left: 20, on right: 21
while_stmt (50)
    on left: 24, on right: 14
$@4 (51)
    on left: 22, on right: 24
$@5 (52)
    on left: 23, on right: 24
stmt_block (53)
    on left: 25, on right: 1 15
stmtlist (54)
    on left: 26 27, on right: 25 26


State 0

    0 $accept: . program $end

    $default  reduce using rule 3 (declarations)

    program       go to state 1
    declarations  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: declarations . stmt_block
    2 declarations: declarations . declaration

    '{'  shift, and go to state 4

    $default  reduce using rule 4 ($@1)

    declaration  go to state 5
    $@1          go to state 6
    stmt_block   go to state 7


State 3

    0 $accept: program $end .

    $default  accept


State 4

   25 stmt_block: '{' . stmtlist '}'

    $default  reduce using rule 27 (stmtlist)

    stmtlist  go to state 8


State 5

    2 declarations: declarations declaration .

    $default  reduce using rule 2 (declarations)


State 6

    5 declaration: $@1 . idlist ':' type ';'

    ID  shift, and go to state 9

    idlist  go to state 10


State 7

    1 program: declarations stmt_block .

    $default  reduce using rule 1 (program)


State 8

   25 stmt_block: '{' stmtlist . '}'
   26 stmtlist: stmtlist . stmt

    IF      shift, and go to state 11
    INPUT   shift, and go to state 12
    OUTPUT  shift, and go to state 13
    WHILE   shift, and go to state 14
    ID      shift, and go to state 15
    '{'     shift, and go to state 4
    '}'     shift, and go to state 16

    stmt             go to state 17
    assignment_stmt  go to state 18
    input_stmt       go to state 19
    output_stmt      go to state 20
    if_stmt          go to state 21
    while_stmt       go to state 22
    stmt_block       go to state 23


State 9

    9 idlist: ID .

    $default  reduce using rule 9 (idlist)


State 10

    5 declaration: $@1 idlist . ':' type ';'
    8 idlist: idlist . ',' ID

    ':'  shift, and go to state 24
    ','  shift, and go to state 25


State 11

   21 if_stmt: IF . create_label '(' boolexpr ')' $@2 stmt $@3 ELSE stmt

    $default  reduce using rule 42 (create_label)

    create_label  go to state 26


State 12

   17 input_stmt: INPUT . '(' ID ')' ';'

    '('  shift, and go to state 27


State 13

   18 output_stmt: OUTPUT . '(' expression ')' ';'

    '('  shift, and go to state 28


State 14

   24 while_stmt: WHILE . create_label $@4 '(' boolexpr ')' $@5 stmt

    $default  reduce using rule 42 (create_label)

    create_label  go to state 29


State 15

   16 assignment_stmt: ID . '=' expression ';'

    '='  shift, and go to state 30


State 16

   25 stmt_block: '{' stmtlist '}' .

    $default  reduce using rule 25 (stmt_block)


State 17

   26 stmtlist: stmtlist stmt .

    $default  reduce using rule 26 (stmtlist)


State 18

   10 stmt: assignment_stmt .

    $default  reduce using rule 10 (stmt)


State 19

   11 stmt: input_stmt .

    $default  reduce using rule 11 (stmt)


State 20

   12 stmt: output_stmt .

    $default  reduce using rule 12 (stmt)


State 21

   13 stmt: if_stmt .

    $default  reduce using rule 13 (stmt)


State 22

   14 stmt: while_stmt .

    $default  reduce using rule 14 (stmt)


State 23

   15 stmt: stmt_block .

    $default  reduce using rule 15 (stmt)


State 24

    5 declaration: $@1 idlist ':' . type ';'

    FLOAT  shift, and go to state 31
    INT    shift, and go to state 32

    type  go to state 33


State 25

    8 idlist: idlist ',' . ID

    ID  shift, and go to state 34


State 26

   21 if_stmt: IF create_label . '(' boolexpr ')' $@2 stmt $@3 ELSE stmt

    '('  shift, and go to state 35


State 27

   17 input_stmt: INPUT '(' . ID ')' ';'

    ID  shift, and go to state 36


State 28

   18 output_stmt: OUTPUT '(' . expression ')' ';'

    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    factor      go to state 41
    term        go to state 42
    expression  go to state 43


State 29

   24 while_stmt: WHILE create_label . $@4 '(' boolexpr ')' $@5 stmt

    $default  reduce using rule 22 ($@4)

    $@4  go to state 44


State 30

   16 assignment_stmt: ID '=' . expression ';'

    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    factor      go to state 41
    term        go to state 42
    expression  go to state 45


State 31

    7 type: FLOAT .

    $default  reduce using rule 7 (type)


State 32

    6 type: INT .

    $default  reduce using rule 6 (type)


State 33

    5 declaration: $@1 idlist ':' type . ';'

    ';'  shift, and go to state 46


State 34

    8 idlist: idlist ',' ID .

    $default  reduce using rule 8 (idlist)


State 35

   21 if_stmt: IF create_label '(' . boolexpr ')' $@2 stmt $@3 ELSE stmt

    NOT   shift, and go to state 47
    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    boolexpr    go to state 48
    boolterm    go to state 49
    boolfactor  go to state 50
    factor      go to state 41
    term        go to state 42
    expression  go to state 51


State 36

   17 input_stmt: INPUT '(' ID . ')' ';'

    ')'  shift, and go to state 52


State 37

   39 factor: CAST . '(' expression ')'

    '('  shift, and go to state 53


State 38

   40 factor: ID .

    $default  reduce using rule 40 (factor)


State 39

   41 factor: NUM .

    $default  reduce using rule 41 (factor)


State 40

   38 factor: '(' . expression ')'

    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    factor      go to state 41
    term        go to state 42
    expression  go to state 54


State 41

   37 term: factor .

    $default  reduce using rule 37 (term)


State 42

   35 expression: term .
   36 term: term . MULOP factor

    MULOP  shift, and go to state 55

    $default  reduce using rule 35 (expression)


State 43

   18 output_stmt: OUTPUT '(' expression . ')' ';'
   34 expression: expression . ADDOP term

    ADDOP  shift, and go to state 56
    ')'    shift, and go to state 57


State 44

   24 while_stmt: WHILE create_label $@4 . '(' boolexpr ')' $@5 stmt

    '('  shift, and go to state 58


State 45

   16 assignment_stmt: ID '=' expression . ';'
   34 expression: expression . ADDOP term

    ADDOP  shift, and go to state 56
    ';'    shift, and go to state 59


State 46

    5 declaration: $@1 idlist ':' type ';' .

    $default  reduce using rule 5 (declaration)


State 47

   32 boolfactor: NOT . '(' boolexpr ')'

    '('  shift, and go to state 60


State 48

   21 if_stmt: IF create_label '(' boolexpr . ')' $@2 stmt $@3 ELSE stmt
   28 boolexpr: boolexpr . OR boolterm

    OR   shift, and go to state 61
    ')'  shift, and go to state 62


State 49

   29 boolexpr: boolterm .
   30 boolterm: boolterm . AND boolfactor

    AND  shift, and go to state 63

    $default  reduce using rule 29 (boolexpr)


State 50

   31 boolterm: boolfactor .

    $default  reduce using rule 31 (boolterm)


State 51

   33 boolfactor: expression . RELOP expression
   34 expression: expression . ADDOP term

    RELOP  shift, and go to state 64
    ADDOP  shift, and go to state 56


State 52

   17 input_stmt: INPUT '(' ID ')' . ';'

    ';'  shift, and go to state 65


State 53

   39 factor: CAST '(' . expression ')'

    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    factor      go to state 41
    term        go to state 42
    expression  go to state 66


State 54

   34 expression: expression . ADDOP term
   38 factor: '(' expression . ')'

    ADDOP  shift, and go to state 56
    ')'    shift, and go to state 67


State 55

   36 term: term MULOP . factor

    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    factor  go to state 68


State 56

   34 expression: expression ADDOP . term

    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    factor  go to state 41
    term    go to state 69


State 57

   18 output_stmt: OUTPUT '(' expression ')' . ';'

    ';'  shift, and go to state 70


State 58

   24 while_stmt: WHILE create_label $@4 '(' . boolexpr ')' $@5 stmt

    NOT   shift, and go to state 47
    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    boolexpr    go to state 71
    boolterm    go to state 49
    boolfactor  go to state 50
    factor      go to state 41
    term        go to state 42
    expression  go to state 51


State 59

   16 assignment_stmt: ID '=' expression ';' .

    $default  reduce using rule 16 (assignment_stmt)


State 60

   32 boolfactor: NOT '(' . boolexpr ')'

    NOT   shift, and go to state 47
    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    boolexpr    go to state 72
    boolterm    go to state 49
    boolfactor  go to state 50
    factor      go to state 41
    term        go to state 42
    expression  go to state 51


State 61

   28 boolexpr: boolexpr OR . boolterm

    NOT   shift, and go to state 47
    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    boolterm    go to state 73
    boolfactor  go to state 50
    factor      go to state 41
    term        go to state 42
    expression  go to state 51


State 62

   21 if_stmt: IF create_label '(' boolexpr ')' . $@2 stmt $@3 ELSE stmt

    $default  reduce using rule 19 ($@2)

    $@2  go to state 74


State 63

   30 boolterm: boolterm AND . boolfactor

    NOT   shift, and go to state 47
    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    boolfactor  go to state 75
    factor      go to state 41
    term        go to state 42
    expression  go to state 51


State 64

   33 boolfactor: expression RELOP . expression

    CAST  shift, and go to state 37
    ID    shift, and go to state 38
    NUM   shift, and go to state 39
    '('   shift, and go to state 40

    factor      go to state 41
    term        go to state 42
    expression  go to state 76


State 65

   17 input_stmt: INPUT '(' ID ')' ';' .

    $default  reduce using rule 17 (input_stmt)


State 66

   34 expression: expression . ADDOP term
   39 factor: CAST '(' expression . ')'

    ADDOP  shift, and go to state 56
    ')'    shift, and go to state 77


State 67

   38 factor: '(' expression ')' .

    $default  reduce using rule 38 (factor)


State 68

   36 term: term MULOP factor .

    $default  reduce using rule 36 (term)


State 69

   34 expression: expression ADDOP term .
   36 term: term . MULOP factor

    MULOP  shift, and go to state 55

    $default  reduce using rule 34 (expression)


State 70

   18 output_stmt: OUTPUT '(' expression ')' ';' .

    $default  reduce using rule 18 (output_stmt)


State 71

   24 while_stmt: WHILE create_label $@4 '(' boolexpr . ')' $@5 stmt
   28 boolexpr: boolexpr . OR boolterm

    OR   shift, and go to state 61
    ')'  shift, and go to state 78


State 72

   28 boolexpr: boolexpr . OR boolterm
   32 boolfactor: NOT '(' boolexpr . ')'

    OR   shift, and go to state 61
    ')'  shift, and go to state 79


State 73

   28 boolexpr: boolexpr OR boolterm .
   30 boolterm: boolterm . AND boolfactor

    AND  shift, and go to state 63

    $default  reduce using rule 28 (boolexpr)


State 74

   21 if_stmt: IF create_label '(' boolexpr ')' $@2 . stmt $@3 ELSE stmt

    IF      shift, and go to state 11
    INPUT   shift, and go to state 12
    OUTPUT  shift, and go to state 13
    WHILE   shift, and go to state 14
    ID      shift, and go to state 15
    '{'     shift, and go to state 4

    stmt             go to state 80
    assignment_stmt  go to state 18
    input_stmt       go to state 19
    output_stmt      go to state 20
    if_stmt          go to state 21
    while_stmt       go to state 22
    stmt_block       go to state 23


State 75

   30 boolterm: boolterm AND boolfactor .

    $default  reduce using rule 30 (boolterm)


State 76

   33 boolfactor: expression RELOP expression .
   34 expression: expression . ADDOP term

    ADDOP  shift, and go to state 56

    $default  reduce using rule 33 (boolfactor)


State 77

   39 factor: CAST '(' expression ')' .

    $default  reduce using rule 39 (factor)


State 78

   24 while_stmt: WHILE create_label $@4 '(' boolexpr ')' . $@5 stmt

    $default  reduce using rule 23 ($@5)

    $@5  go to state 81


State 79

   32 boolfactor: NOT '(' boolexpr ')' .

    $default  reduce using rule 32 (boolfactor)


State 80

   21 if_stmt: IF create_label '(' boolexpr ')' $@2 stmt . $@3 ELSE stmt

    $default  reduce using rule 20 ($@3)

    $@3  go to state 82


State 81

   24 while_stmt: WHILE create_label $@4 '(' boolexpr ')' $@5 . stmt

    IF      shift, and go to state 11
    INPUT   shift, and go to state 12
    OUTPUT  shift, and go to state 13
    WHILE   shift, and go to state 14
    ID      shift, and go to state 15
    '{'     shift, and go to state 4

    stmt             go to state 83
    assignment_stmt  go to state 18
    input_stmt       go to state 19
    output_stmt      go to state 20
    if_stmt          go to state 21
    while_stmt       go to state 22
    stmt_block       go to state 23


State 82

   21 if_stmt: IF create_label '(' boolexpr ')' $@2 stmt $@3 . ELSE stmt

    ELSE  shift, and go to state 84


State 83

   24 while_stmt: WHILE create_label $@4 '(' boolexpr ')' $@5 stmt .

    $default  reduce using rule 24 (while_stmt)


State 84

   21 if_stmt: IF create_label '(' boolexpr ')' $@2 stmt $@3 ELSE . stmt

    IF      shift, and go to state 11
    INPUT   shift, and go to state 12
    OUTPUT  shift, and go to state 13
    WHILE   shift, and go to state 14
    ID      shift, and go to state 15
    '{'     shift, and go to state 4

    stmt             go to state 85
    assignment_stmt  go to state 18
    input_stmt       go to state 19
    output_stmt      go to state 20
    if_stmt          go to state 21
    while_stmt       go to state 22
    stmt_block       go to state 23


State 85

   21 if_stmt: IF create_label '(' boolexpr ')' $@2 stmt $@3 ELSE stmt .

    $default  reduce using rule 21 (if_stmt)
